; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/virt/kvm/extr_kvm_main.c_kvm_exit_debug.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/virt/kvm/extr_kvm_main.c_kvm_exit_debug.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_stats_debugfs_item = type { i32, i64 }

@debugfs_entries = common dso_local global %struct.kvm_stats_debugfs_item* null, align 8
@kvm_debugfs_dir = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @kvm_exit_debug to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @kvm_exit_debug() #0 {
  %1 = alloca %struct.kvm_stats_debugfs_item*, align 8
  %2 = load %struct.kvm_stats_debugfs_item*, %struct.kvm_stats_debugfs_item** @debugfs_entries, align 8
  store %struct.kvm_stats_debugfs_item* %2, %struct.kvm_stats_debugfs_item** %1, align 8
  br label %3

3:                                                ; preds = %13, %0
  %4 = load %struct.kvm_stats_debugfs_item*, %struct.kvm_stats_debugfs_item** %1, align 8
  %5 = getelementptr inbounds %struct.kvm_stats_debugfs_item, %struct.kvm_stats_debugfs_item* %4, i32 0, i32 1
  %6 = load i64, i64* %5, align 8
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %16

8:                                                ; preds = %3
  %9 = load %struct.kvm_stats_debugfs_item*, %struct.kvm_stats_debugfs_item** %1, align 8
  %10 = getelementptr inbounds %struct.kvm_stats_debugfs_item, %struct.kvm_stats_debugfs_item* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @debugfs_remove(i32 %11)
  br label %13

13:                                               ; preds = %8
  %14 = load %struct.kvm_stats_debugfs_item*, %struct.kvm_stats_debugfs_item** %1, align 8
  %15 = getelementptr inbounds %struct.kvm_stats_debugfs_item, %struct.kvm_stats_debugfs_item* %14, i32 1
  store %struct.kvm_stats_debugfs_item* %15, %struct.kvm_stats_debugfs_item** %1, align 8
  br label %3

16:                                               ; preds = %3
  %17 = load i32, i32* @kvm_debugfs_dir, align 4
  %18 = call i32 @debugfs_remove(i32 %17)
  ret void
}

declare dso_local i32 @debugfs_remove(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
